--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "dependencies": {
     "handlebars": "^4.7.8",
     "parcel-transformer-hbs": "^1.0.4"
+  },
+  "devDependencies": {
+    "parcel-plugin-handlebars": "^0.4.4"
   }
 }
