--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "parcel-transformer-hbs": "^1.0.4"
   },
   "devDependencies": {
-    "parcel-plugin-handlebars": "^0.4.4"
+    "parcel-plugin-handlebars": "^0.4.4",
+    "parcel-plugin-handlebars-precompile": "^1.0.2"
   }
 }
