--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "dependencies": {
-    "handlebars": "^4.7.8",
-    "parcel-transformer-hbs": "^1.0.4"
+    "handlebars": "^4.7.8"
   },
   "devDependencies": {
     "parcel": "^2.12.0",
-    "parcel-plugin-handlebars": "^0.4.4",
-    "parcel-plugin-handlebars-precompile": "^1.0.2"
+
+    "parcel-plugin-handlebars-precompile": "^1.0.2",
+    "parcel-transformer-hbs": "^1.0.4"
   }
 }
