--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "parcel": "^2.12.0",
-
+    "parcel-plugin-handlebars": "^0.4.4",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-transformer-hbs": "^1.0.4"
   }
